Styled the title in application.scss

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,23 @@
   		</div>
   	 </div>
 
+	 <div id="navbarExample" class="navbar-menu">
+	 <div class="navbar-end">
+	 <div class="field is-grouped">
+	 <p class="control">
+	 <%= link_to 'New Tweet', root_path, class: "button is-info is-inverted" %>
+
+	 </p>
+	 </div>
+	 </div>
+
+	 </div>
+
+
+	 
+
+     
+
 					
   	</nav>
 
