--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,9 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<section class="section">
+<div class="container">
+<div class="columns">
 
-<h1>Tweets</h1>
+</div>
+</div>
 
-<div id="tweets">
+</section>
   <% @tweets.each do |tweet| %>
+
     <%= render tweet %>
     <p>
       <%= link_to "Show this tweet", tweet %>
